<resources>
    <string name="app_name">Project_IRLRPG</string>

    <string name="txtMenu">Welcome to Shaines Silly App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="newG">New Game</string>
    <string name="load">Load Game</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_load_game_menu">LoadGameMenu</string>
    <string name="title_activity_new_game_menu">NewGameMenu</string>
    <string name="delete">Delete</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="classes">Choose Class</string>
    <string name="races">Choose Race</string>
    <string name="submit">Submit</string>
    <string name="title_activity_stat_page">StatPage</string>
    <string name="charName">Name:</string>
    <string name="strV">Strength</string>
    <string name="intV">Intelligence</string>
    <string name="wilV">Will</string>
    <string name="lukV">Luck</string>
    <string name="endV">Endurance</string>
    <string name="vitV">Vitality</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="ptsV">Points Remaining</string>
    <string name="nameCharDefault">None</string>
    <string name="plus">+</string>
    <string name="title_activity_fight">Fight</string>
    <string name="fight">Fight</string>
    <string name="bag">Stats</string>
    <string name="run">Run Away</string>
    <string name="title_activity_main_screen">mainScreen</string>
    <string name="db">Mob Maker</string>
    <string name="title_activity_mob_maker">mobMaker</string>
    <string name="title_activity_add_character">AddCharacterActivity</string>

    <string name="firstName">Name:</string>
    <string name="lastName">Description:</string>
    <string name="email">Price(CAD):</string>
    <string name="email1">Price(BIT):</string>
    <string name="phone">Phone:</string>

    <string name="charClass">Class:</string>
    <string name="charRace">Race:</string>

    <string name="att1">Level:</string>
    <string name="att2">INT:</string>
    <string name="att3">VIT:</string>
    <string name="att4">WIL:</string>
    <string name="att5">STR:</string>
    <string name="att6">DEX:</string>
    <string name="att7">LUK:</string>
    <string name="att8">END:</string>
    <string name="att9">PTS:</string>
    <string name="att10">EXP:</string>

    <string name="nextContact">Next</string>
    <string name="prevContact">Previous</string>
    <string name="delContact">Delete</string>
    <string name="addContact">Save</string>
    <string name="canContact">Cancel</string>
    <string name="addNewProd">Add</string>
    <string name="addNewMons">Add</string>

    <string name="preparing">Preparing to test database operations</string>
    <string name="error">There was an error when performing database operations</string>
    <string name="success">Database operations have been completed successfully</string>

    <string name="title_activity_add_product">Add Character Object</string>

    <string name="hello_world">Hello world!</string>
    <string name="addOp">+</string>

</resources>
