<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="35"
    tools:context="com.example.rob.finalprojectmobile.mobMaker">

    <TextView android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:layout_row="1"
        android:layout_column="0" />

    <TextView android:id="@+id/lblNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="1"
        android:layout_column="1" />

    <TextView android:id="@+id/lblRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charRace"
        android:layout_row="2"
        android:layout_column="0" />

    <TextView android:id="@+id/lblRaceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="2"
        android:layout_column="1" />

    <TextView android:id="@+id/lblClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charClass"
        android:layout_row="3"
        android:layout_column="0" />

    <TextView android:id="@+id/lblClassValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="3"
        android:layout_column="1" />

    <TextView
        android:id="@+id/lblLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/att1"
        android:layout_row="4"
        android:layout_column="0" />

    <TextView
        android:id="@+id/lblLevelValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:id="@+id/lblInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/att2"
        android:layout_row="6"
        android:layout_column="0" />

    <TextView
        android:id="@+id/lblIntValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="6"
        android:layout_column="1" />

    <TextView
        android:id="@+id/lblVit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/att3"
        android:layout_row="7"
        android:layout_column="0" />

    <TextView
        android:id="@+id/lblVitValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="7"
        android:layout_column="1" />

    <TextView
        android:id="@+id/lblWil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/att4"
        android:layout_row="8"
        android:layout_column="0" />

    <TextView
        android:id="@+id/lblWilValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="8"
        android:layout_column="1" />

    <TextView
        android:id="@+id/lblStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/att5"
        android:layout_row="10"
        android:layout_column="0" />

    <TextView
        android:id="@+id/lblStrValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="10"
        android:layout_column="1" />

    <TextView
        android:id="@+id/lblLuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/att7"
        android:layout_row="12"
        android:layout_column="0" />

    <TextView
        android:id="@+id/lblLukValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="12"
        android:layout_column="1" />

    <TextView
        android:id="@+id/lblEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/att8"
        android:layout_row="13"
        android:layout_column="0" />

    <TextView
        android:id="@+id/lblEndValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text=""
        android:layout_row="13"
        android:layout_column="1" />

    <Button android:id="@+id/btnPrevContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevContact"
        android:onClick="prevCharacter"
        android:enabled="false"
        android:layout_row="15"
        android:layout_column="0" />

    <Button
        android:id="@+id/btnNextContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextContact"
        android:onClick="nextCharacter"
        android:layout_row="15"
        android:layout_column="1" />

    <Button
        android:id="@+id/btnDelContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delContact"
        android:onClick="deleteCharacter"
        android:layout_row="17"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewMons"
        android:id="@+id/button2"
        android:layout_row="17"
        android:layout_column="1"
        android:onClick="addCharactertoDB" />

</GridLayout>