<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context="com.example.shaineperera.project_irlrpg.MainMenuActivity">

    <Button
        android:id="@+id/btnNew"
        android:text="@string/newG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="newGame"
        android:layout_above="@+id/btnLoad"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnLoad"
        android:text="@string/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loadGame"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db"
        android:id="@+id/button"
        android:onClick="make"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnLoad" />
<ImageView
    android:id="@+id/background"
    android:src="@drawable/background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true" />

</RelativeLayout>
